@@ -1,3 +1,10 @@
+Thu Nov 10 16:30:04 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
+
+        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
+        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
+
+          Provide narrow() that accepts ptrs, rather than vars.
+
 Thu Nov 10 14:32:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:
